<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:id="@+id/sv_place_detail_parent"
        android:layout_width="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:padding="8dp">

        <edu.vanderbilt.vm.doreguide.views.AspectRatioImageView
                android:visibility="gone"
                android:src="@drawable/ic_launcher"
                android:id="@+id/iv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"/>

        <TextView
                android:textSize="26sp"
                android:id="@+id/tv_title"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">

            <ImageButton
                    android:id="@+id/btn_map"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/location_map"/>

            <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                <CheckBox
                        android:id="@+id/cb_heart"
                        android:layout_margin="4dp"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"/>

                <ImageButton
                        android:id="@+id/btn_heart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/rating_important"/>

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card"
                android:orientation="vertical"
                android:layout_margin="8dp"
                android:padding="12dp">

            <TextView
                    android:layout_margin="4dp"
                    style="@style/detail_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"/>

            <TextView
                    android:id="@+id/tv_desc"
                    android:layout_margin="4dp"
                    style="@style/description_text_wall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card"
                android:orientation="vertical"
                android:layout_margin="8dp"
                android:id="@+id/ll_nearby"
                android:padding="12dp">

            <TextView
                    android:layout_margin="4dp"
                    style="@style/detail_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nearby"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card"
                android:orientation="vertical"
                android:layout_margin="8dp"
                android:padding="12dp">

            <TextView
                    android:layout_margin="4dp"
                    style="@style/detail_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/comment"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/comment_email"
                    android:ems="10"
                    android:id="@+id/et_email"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:minLines="4"
                    android:gravity="top"
                    android:ems="10"
                    android:id="@+id/et_content"
                    android:hint="@string/comment_feedback"/>

            <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/comment_submit"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
